
Headers of type `MimeType` and `MediaType` are now mapped as simple strings in the `RecordHeader` value.
Previously, they were mapped as JSON and only `MimeType` was decoded, `MediaType` could not be decoded.
They are now simple strings for interoperability.

Also, the `DefaultKafkaHeaderMapper` has a new method `addToStringClasses` allowing the specification of types that should be mapped using `toString()` instead of JSON.

See <<headers>> for more information.

==== Embedded Kafka Changes

The `KafkaEmbedded` class and its `KafkaRule` interface have need deprecated in favor of the `EmbeddedKafkaBroker` and its JUnit 4 `EmbeddedKafkaRule` wrapper.
The `@EmbeddedKafka` annotation now populates an `EmbeddedKafkaBroker` bean instead of the deprecated `KafkaEmbedded`.
This allows the use of `@EmbeddedKafka` in JUnit 5 tests.

See <<testing>> for more information.

==== JsonSerializer/Deserializer Enhancements

You can now provide type mapping information using producer/consumer properties.

New constructors are available on the deserializer to allow overriding the type header information with the supplied target type.

The `JsonDeserializer` will now remove any type information headers by default.

The `JsonDeserializer` can now be configured to ignore type information headers using a kafka property (since 2.2.3).

See <<serdes>> for more information.

==== Kafka Streams Changes

The streams configuration bean must now be a `KafkaStreamsConfiguration` object instead of a `StreamsConfig`.

The `StreamsBuilderFactoryBean` has been moved from package `...core` to `...config`.

See <<kafka-streams>> and <<streams-config>> for more information.


==== Transactional Id

When a transaction is started by the listener container, the `transactional.id` is now the `transactionIdPrefix` appended with `<group.id>.<topic>.<partition>`.
This is to allow proper fencing of zombies https://www.confluent.io/blog/transactions-apache-kafka/[as described here].