@@ -1,5 +1,5 @@
 /*
- * Copyright 2017-2018 the original author or authors.
+ * Copyright 2017-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -41,6 +41,7 @@ import org.springframework.util.StringUtils;
  * @author Elliot Metsger
  * @author Zach Olauson
  * @author Oleg Artyomov
+ * @author Sergio Lourenco
  *
  * @since 1.3
  */
@@ -69,6 +70,8 @@ class EmbeddedKafkaContextCustomizer implements ContextCustomizer {
 				this.embeddedKafka.controlledShutdown(),
 				this.embeddedKafka.partitions(),
 				topics);
+
+		embeddedKafkaBroker.kafkaPorts(this.embeddedKafka.ports());
 
 		Properties properties = new Properties();
 
