@@ -1,5 +1,5 @@
 /*
- * Copyright 2017 the original author or authors.
+ * Copyright 2017-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,24 +17,31 @@
 package org.springframework.kafka.test.context;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.BDDMockito.mock;
 
 import org.junit.Before;
 import org.junit.Test;
 
+import org.springframework.beans.BeansException;
+import org.springframework.beans.factory.DisposableBean;
+import org.springframework.beans.factory.support.DefaultListableBeanFactory;
+import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.core.annotation.AnnotationUtils;
+import org.springframework.core.env.ConfigurableEnvironment;
+import org.springframework.kafka.test.EmbeddedKafkaBroker;
 
 
 
 /**
  * @author Oleg Artyomov
+ * @author Sergio Lourenco
  * @since 1.3
  */
-
 public class EmbeddedKafkaContextCustomizerTests {
 
 	private EmbeddedKafka annotationFromFirstClass;
 	private EmbeddedKafka annotationFromSecondClass;
-
 
 	@Before
 	public void beforeEachTest() {
@@ -56,6 +63,19 @@ public class EmbeddedKafkaContextCustomizerTests {
 		assertThat(new EmbeddedKafkaContextCustomizer(annotationFromFirstClass)).isNotEqualTo(new Object());
 	}
 
+	@Test
+	public void testPorts() {
+		EmbeddedKafka annotationWithPorts = AnnotationUtils.findAnnotation(TestWithEmbeddedKafkaPorts.class, EmbeddedKafka.class);
+		EmbeddedKafkaContextCustomizer customizer = new EmbeddedKafkaContextCustomizer(annotationWithPorts);
+		ConfigurableApplicationContext context = mock(ConfigurableApplicationContext.class);
+		BeanFactoryStub factoryStub = new BeanFactoryStub();
+		given(context.getBeanFactory()).willReturn(factoryStub);
+		given(context.getEnvironment()).willReturn(mock(ConfigurableEnvironment.class));
+		customizer.customizeContext(context, null);
+
+		assertThat(factoryStub.getBroker().getBrokersAsString()).isEqualTo("127.0.0.1:" + annotationWithPorts.ports()[0]);
+	}
+
 
 	@EmbeddedKafka
 	private class TestWithEmbeddedKafka {
@@ -67,4 +87,32 @@ public class EmbeddedKafkaContextCustomizerTests {
 
 	}
 
+	@EmbeddedKafka(ports = 8085)
+	private class TestWithEmbeddedKafkaPorts {
+
+	}
+
+	private class BeanFactoryStub extends DefaultListableBeanFactory {
+		private Object bean;
+
+		public EmbeddedKafkaBroker getBroker() {
+			return (EmbeddedKafkaBroker) bean;
+		}
+
+		@Override
+		public Object initializeBean(Object existingBean, String beanName) throws BeansException {
+			this.bean = existingBean;
+			return bean;
+		}
+
+		@Override
+		public void registerSingleton(String beanName, Object singletonObject) {
+
+		}
+
+		@Override
+		public void registerDisposableBean(String beanName, DisposableBean bean) {
+
+		}
+	}
 }
