@@ -46,7 +46,6 @@ import org.springframework.util.concurrent.ListenableFuture;
 /**
  * @author Gary Russell
  * @since 1.0.6
- *
  */
 @EmbeddedKafka(topics = { "txCache1", "txCache2", "txCacheSendFromListener" },
 		brokerProperties = {
